--- a/wc02.tex
+++ b/wc02.tex
@@ -8,7 +8,7 @@
 \printanswers
 
 \title{Weekly Challenge 02: Logical Thinking\\CS/MATH 113 Discrete Mathematics}
-\author{$\langle team-name \rangle$}  % <== for grading, replace with your team name, e.g. q1-team-420
+\author{$\langle q1-team-02 \rangle$}  % <== for grading, replace with your team name, e.g. q1-team-420
 \date{Habib University | Spring 2023}
 
 \qformat{{\large\bf \thequestion. \thequestiontitle}\hfill}
