--- a/wc02.tex
+++ b/wc02.tex
@@ -37,7 +37,7 @@
     3. Suppose A1 responds “Can’t tell”. Then, it must be true that at least k of the other compasses are faulty, since the guide announced at least k faulty compasses. Therefore, all subsequent hikers must respond “Faulty” or “Working”. Hence, no subsequent hiker can respond “Can’t tell”. Therefore, as soon as a hiker responds “Faulty”, no subsequent hiker will respond “Can’t tell”.
     Since there are AT LEAST k faulty compasses, it means that the threshold of k has to pass or remain as is. It cannot be less than k. Because the hikers are highly logical they will have to respond faulty until the condition of k is met.
     
-    c) If there are at most 20 faulty compasses and the hiker counts 19 faulty from his other team mates then he knows that his compass is also faulty therefore all subsequent hikers will have to respond working.
+    c) If there are at most 20 faulty compasses and the hiker counts 19 faulty from his other team mates then he knows that his compass is also faulty therefore all subsequent hikers will have to respond working. Since at most k compasses are faulty, the limit is k and it cannot be exceeded therefore when the limit k is met, all other hikers would have to say working because they are highly logical.
   \end{solution}
 \end{questions}
 
